welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: error: not found: type cpt
    ecritMessage(msg:cpt)
                     ^ColumnByColumn:8: error: not found: value msg
    ecritMessage(msg:cpt)
                 ^